<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_header" android:visibility="gone"/>

    <include layout="@layout/include_header_test" android:visibility="visible"/>

    <com.google.android.material.tabs.TabLayout
        android:visibility="gone"
        android:id="@+id/tabLayout"
        app:tabIndicatorHeight="5dp"
        app:tabIndicatorColor="@color/orangeWhiteLightest"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        android:background="@color/orangeLighter"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <com.google.android.material.tabs.TabItem
            android:text="@string/repository_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <com.google.android.material.tabs.TabItem
            android:text="@string/repository_contributors"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <com.google.android.material.tabs.TabItem
            android:text="@string/repository_issues"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

</LinearLayout>