<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/grayLighter"
              android:layout_marginBottom="10dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="2dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameTextView"
            style="@style/CustomTextViewStyle"
            android:text="Name"
            android:ellipsize="end"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/orangeStrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_marginBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fullNameTextView"
                android:layout_toStartOf="@id/updatedAtTextView"
                android:layout_marginEnd="10dp"
                style="@style/CustomTextViewStyle"
                android:text="Full Name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="12sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/orangeWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/updatedAtTextView"
                android:layout_alignParentEnd="true"
                style="@style/CustomTextViewStyle"
                android:text="Updated on 18 Marzo 2019"
                android:textSize="12sp"
                android:layout_marginEnd="6dp"
                android:textColor="@color/orangeWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/CustomTextViewStyle"
            android:text="Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco"
            android:textSize="12sp"
            android:ellipsize="end"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/languageIconView"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:materialIcon="circle"
                    app:materialIconColor="@color/orangeWhite"
                    app:materialIconSize="15dp"
                    android:scaleType="center"/>
                <TextView
                    android:id="@+id/languageTextView"
                    style="@style/CustomTextViewStyle"
                    android:text="Kotlin"
                    android:textSize="12sp"
                    android:textColor="@color/orangeWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:materialIcon="star"
                    app:materialIconColor="@color/orangeWhite"
                    app:materialIconSize="20dp"
                    android:scaleType="center"/>
                <TextView
                    android:id="@+id/watchersTextView"
                    style="@style/CustomTextViewStyle"
                    android:text="4567"
                    android:textSize="12sp"
                    android:textColor="@color/orangeWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginEnd="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:materialIcon="source_fork"
                    app:materialIconColor="@color/orangeWhite"
                    app:materialIconSize="18dp"
                    android:scaleType="center"/>
                <TextView
                    android:id="@+id/forksTextView"
                    style="@style/CustomTextViewStyle"
                    android:text="1234"
                    android:textSize="12sp"
                    android:textColor="@color/orangeWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:materialIcon="power_plug_off"
                    app:materialIconColor="@color/orangeWhite"
                    app:materialIconSize="20dp"
                    android:scaleType="center"/>
                <TextView
                    android:id="@+id/openIssuesTextView"
                    style="@style/CustomTextViewStyle"
                    android:text="1234"
                    android:textSize="12sp"
                    android:textColor="@color/orangeWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CustomTextViewStyle"
                android:text="@string/details_default_branch"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="12sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/orangeWhite"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/defaultBranchTextView"
                style="@style/CustomTextViewStyle"
                android:text="master"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/orangeLight"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CustomTextViewStyle"
                android:text="@string/details_license"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="12sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/orangeWhite"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/licenseTextView"
                style="@style/CustomTextViewStyle"
                android:text="MIT"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/orangeLight"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CustomTextViewStyle"
                android:text="@string/details_search_score"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="12sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/orangeWhite"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/scoreTextView"
                style="@style/CustomTextViewStyle"
                android:text="48.192483"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/orangeLight"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CustomTextViewStyle"
                android:text="@string/details_homepage"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="12sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/orangeWhite"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/homepageTextView"
                    style="@style/CustomTextViewStyle"
                    android:text="https://reactjs.org"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:textColor="@color/orangeLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                
                <View
                    android:layout_below="@id/homepageTextView"
                    android:layout_alignEnd="@id/homepageTextView"
                    android:layout_alignStart="@id/homepageTextView"
                    android:background="@color/orangeLight"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CustomTextViewStyle"
                android:text="@string/details_size"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="12sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/orangeWhite"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sizeTextView"
                    style="@style/CustomTextViewStyle"
                    android:text="140593"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:textColor="@color/orangeLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/CustomTextViewStyle"
                    android:text="@string/details_kb"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:textColor="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>